# apple-music-rpc

./: Cargo.toml  README.md
src/: cache.rs  main.rs  structs.rs  util.rs
