[package]
name = "apple-music-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
discord-rich-presence = "0.2.5"
reqwest = { version = "^0.12", features = ["json"] }
url = "^2.3"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
osascript = "0.3.0"
tokio = { version = "1.42", features = ["full"] }
thiserror = "2.0.9"
